--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -35,7 +35,7 @@
 }
 
 .home__img {
-  background: url(../../assets/profile1.jpg);
+  background: url(../../assets/hariti.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
